# Liara-toolkit

./: .gitignore  ARCHITECTURE.md  LICENSE.md  README.md  TOOLS.md
app/: index.html  package-lock.json  package.json
app/src/: AgendaDrawer.tsx  App.css  App.tsx  Chart.tsx  ChatsDrawer.tsx  ConsentModal.tsx  ContactsDrawer.tsx  EmailDrawer.tsx  ExitModal.tsx  LoadOverlays.tsx  MenuDrawer.tsx  ModelDrawer.tsx  NetDrawer.tsx  PeerHub.tsx  PermsDrawer.tsx  ProfileDrawer.tsx  SmsDrawer.tsx  ThemeDrawer.tsx  audio.ts  constants.ts  i18n.ts  markdown.tsx  models.test.ts  models.ts  peer.ts  text.test.ts  text.ts  tree.test.ts  tree.ts  useAgenda.ts  useContacts.ts  useEmail.ts  useModelDownload.ts  useProfile.ts  useSms.ts
app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src-tauri/src/commands/: audio.rs  calendar.rs  consent.rs  contacts.rs  download.rs  email.rs  generate.rs  memory.rs  mod.rs  model_files.rs  peer.rs  peer_ai.rs  phone.rs  rag.rs  remote.rs  sink.rs  sms.rs  vision.rs
app/src-tauri/src/core/: android_ctx.rs  eval.rs  extract.rs  mcp.rs  mod.rs  paths.rs
app/src-tauri/src/core/agent/: agent_loop.rs  format.rs  mod.rs  parse.rs  stream.rs
app/src-tauri/src/core/audio/: mod.rs  text.rs  vad.rs
app/src-tauri/src/core/calendar/: mod.rs
app/src-tauri/src/core/contacts/: mod.rs
app/src-tauri/src/core/crypto/: android_keystore.rs  mod.rs
app/src-tauri/src/core/email/: imap.rs  mod.rs  query.rs  smtp.rs  store.rs  tests.rs
app/src-tauri/src/core/engine/: llama.rs  mod.rs  utf8.rs
app/src-tauri/src/core/memory/: facts.rs  mod.rs  notes.rs  settings.rs  store.rs  tests.rs  vector.rs
app/src-tauri/src/core/peer/: mod.rs
app/src-tauri/src/core/sms/: mod.rs
app/src-tauri/src/core/tools/: mod.rs  registry.rs
app/src-tauri/src/core/tools/builtin/: basic.rs  calendar_tools.rs  contacts_tools.rs  email_tools.rs  files.rs  files_write.rs  mod.rs  notes.rs  peer.rs  phone.rs  sms_tools.rs  weather.rs  web.rs
scripts/: smoke-android.sh
